Remove ZGC, for now